--- a/MatrixResponsibility.Client/wwwroot/index.html
+++ b/MatrixResponsibility.Client/wwwroot/index.html
@@ -7,8 +7,7 @@
     <title>MatrixResponsibility.Client</title>
     <base href="/" />
     <link rel="stylesheet" href="css/app.css" />
-    <!-- If you add any scoped CSS files, uncomment the following to load them
-    <link href="MatrixResponsibility.Client.styles.css" rel="stylesheet" /> -->
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css" />
 </head>
 
 <body>
@@ -26,6 +25,7 @@
         <span class="dismiss">🗙</span>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 </body>
 
 </html>
